@@ -8,6 +8,10 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+removed use of Term::ReadLine in Makefile.PL to make it work on
+systems with broken Term::ReadLines installed. 
+[Ask Bjoern Hansen <ask@netcetera.dk>]
+
 fix Makefile.PL and Apache::src to find MODULE_MAGIC_NUMBER in ap_mmn.h
 
 if PERL_DESTRUCT_LEVEL < 0, skip perl_destruct(), etc. in perl_shutdown()
